<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    style="@style/RootLinearLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout">

    <ScrollView
        android:id="@+id/scrollView"
        style="@style/ScrollStyle">

        <LinearLayout
            style="@style/ScrollLinearVertical">

            <LinearLayout
                style="@style/VerticalRow"
                android:layout_marginBottom="4dp">
                <TextView
                    android:id="@+id/stateOfHealthView"
                    style="@style/DoubleLabelStyle"
                    android:layout_gravity="center"
                    android:text="@string/label_stateOfHealth" />
                <EditText
                    android:id="@+id/inputStateOfHealth"
                    style="@style/MediumInputStyle"
                    android:minHeight ="68dp"
                    android:text="Zdrowy" />
            </LinearLayout>


            <LinearLayout
                style="@style/VerticalRow"
                android:layout_marginBottom="4dp">
                <TextView
                    android:id="@+id/familyInformationView"
                    style="@style/DoubleLabelStyle"
                    android:layout_gravity="center"
                    android:text="@string/label_family" />
                <EditText
                    android:id="@+id/inputFamily"
                    android:minHeight ="68dp"
                    style="@style/MediumInputStyle" />
            </LinearLayout>




            <LinearLayout
                style="@style/VerticalRow"
                android:layout_marginBottom="4dp">
                    <TextView
                        android:id="@+id/historyView"
                        style="@style/DoubleLabelStyle"
                        android:layout_gravity="center"
                        android:text="@string/label_history" />
                    <EditText
                        android:id="@+id/inputHistory"
                        android:minHeight ="68dp"
                        style="@style/MediumInputStyle" />
            </LinearLayout>




            <LinearLayout
                style="@style/VerticalRow"
                android:layout_marginBottom="4dp">
                <TextView
                    android:id="@+id/additionalInformationView"
                    style="@style/DoubleLabelStyle"
                    android:layout_gravity="center"
                    android:text="@string/label_additionalInformation" />
                <EditText
                    android:id="@+id/inputAdditionalInformation"
                    android:minHeight ="68dp"
                    style="@style/MediumInputStyle" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="8dp"
        android:paddingBottom="16dp">

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/back_001"
            android:scaleType="fitCenter"
            android:paddingTop="8dp"
            android:paddingBottom="16dp"
            android:adjustViewBounds="true"
            android:background="@null"/>

        <Space
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/exitButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/exit_002"
            android:scaleType="fitCenter"

            android:adjustViewBounds="true"
            android:background="@null"/>

        <Space
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/next_001"
            android:scaleType="fitCenter"
            android:paddingTop="8dp"
            android:paddingBottom="16dp"
            android:adjustViewBounds="true"
            android:background="@null" />

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
